# webRTC_vad

./: CMakeLists.txt  README.md  build.sh  ndk-build.sh
execute/: vad_demo
output_pcm/: output_filename_prefix_0-1629_A.pcm  output_filename_prefix_10500-13359_A.pcm  output_filename_prefix_13360-14769_I.pcm  output_filename_prefix_14770-16219_A.pcm  output_filename_prefix_16220-19039_A.pcm  output_filename_prefix_1630-3959_A.pcm  output_filename_prefix_19040-20419_I.pcm  output_filename_prefix_20420-22829_A.pcm  output_filename_prefix_22830-23829_A.pcm  output_filename_prefix_23830-26019_A.pcm  output_filename_prefix_26020-27339_I.pcm  output_filename_prefix_27340-29329_A.pcm  output_filename_prefix_29330-30359_A.pcm  output_filename_prefix_30360-32199_A.pcm  output_filename_prefix_32200-34169_A.pcm  output_filename_prefix_34170-35689_A.pcm  output_filename_prefix_35690-36859_A.pcm  output_filename_prefix_36860-39979_A.pcm  output_filename_prefix_3960-4959_A.pcm  output_filename_prefix_39980-40979_A.pcm  output_filename_prefix_40980-43819_A.pcm  output_filename_prefix_43820-45159_I.pcm  output_filename_prefix_45160-48409_A.pcm  output_filename_prefix_48410-49849_A.pcm  output_filename_prefix_4960-7449_A.pcm  output_filename_prefix_49850-52019_A.pcm  output_filename_prefix_52020-53229_A.pcm  output_filename_prefix_53230-58409_A.pcm  output_filename_prefix_58410-61899_A.pcm  output_filename_prefix_61900-64949_A.pcm  output_filename_prefix_64950-65949_A.pcm  output_filename_prefix_65950-67809_A.pcm  output_filename_prefix_67810-69219_I.pcm  (+21 more)
pcm/: processaudio.pcm
(+6 files in other folders)
